--- a/project/index.html
+++ b/project/index.html
@@ -1,8 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <meta name="description" content="Project app with VueJS, NodeJS and MongoDB">
+    <meta name="keywords" content="vue">
+    <meta name="robots" content="index, follow">
+    <meta name="DC.title" content="Vue Project app | Project app Built With Vue JS">
+
+    <meta property="og:url" content="https://github.com/HienNguyen711/vueblog/tree/master/project">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Vue Project app | Project app Built With Vue JS">
+    <meta property="og:description" content="Project app Built With Vue JS By Hien Nguyen">
+    <meta property="og:image" content="https://vuejs.org/images/logo.png">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:creator" content="@hiennguyen">
+    <meta name="twitter:site" content="@hiennguyen">
+    <meta name="twitter:title" content="Project app | Project app Built With Vue JS">
+    <meta name="twitter:description" content="Project app With Vue JS By Hien Nguyen">
+    <meta name="twitter:image" content="https://vuejs.org/images/logo.png">
     <title>project</title>
+     <link rel="canonical" href="https://github.com/HienNguyen711/vueblog/tree/master/project">
+    <link rel="author" href="https://github.com/HienNguyen711" />
+    <link rel="publisher" href="https://github.com/HienNguyen711" />
      <link href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Titillium+Web:700|Source+Serif+Pro:400,700|Merriweather+Sans:400,700|Source+Sans+Pro:400,300,600,700,300italic,400italic,600italic,700italic" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/css/bootstrap.min.css">
